fix set hover align

--- a/src/main/resources/static/style/user_style.css
+++ b/src/main/resources/static/style/user_style.css
@@ -144,7 +144,6 @@ ul {
 }
 
 .content li:hover a {
-  padding: 0;
   text-decoration: none;
   background-color:  rgba(0,0,0,0);
 }
@@ -199,23 +198,6 @@ ul {
   left: 85px;
 }
 
+.cardset a{
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+}
